[project]
name="transformer_LR_WF"
authors = [
    {name="Sebastián Roca-Jerat", email="sroca@unizar.es"},
    {name="Manuel Gallego", email="manuel.gallego@unizar.es"},
    {name="Jesús Carrete Montaña", email="jcarrete@unizar.es"},
    {name="David Zueco", email="dzueco@unizar.es"}
]
description="a vision transformer ansatz for spin-1/2 systems with long-range interactions"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy>=1.26.4",
    "jax>=0.4.25",
    "netket>=3.11.2",
    "flax>=0.8.4",
    "optax>=0.2.1"
]
dynamic = ["version"]
readme = "README.md"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
